accordion scaling fixed on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@ body {
     margin: 0;
     padding: 0;
     height: auto;
+    overflow-y: scroll;
 }
 
 main {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    height: 100vh; 
+    height: auto; 
     margin: 0;
     min-height: 100vh;
     padding-bottom: 80px;
@@ -133,4 +134,12 @@ footer {
 
 li a {
     text-decoration: none;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+    .accordion {
+        width: 100%; 
+    }
 }
